# phuse-python-sde-sep2021

./: .gitignore  LICENSE.txt  Pipfile  README.md  pyproject.toml  start.bat  start.sh
workbooks/: 00-Introduction.ipynb  01-Loading-data.ipynb  02-Calling-Web-APIs.ipynb  03-The-CDISC-Library-API.ipynb  04-Bringing-it-together.ipynb  05-Wrap-it-up.ipynb  client.py  utils.py
